# FloatLyrics

./: .SRCINFO  .gitignore  AGENTS.md  CONTRIBUTING.md  Cargo.toml  PKGBUILD  PLAN.md  README.md  about.toml  biome.json  build.rs  package.json  rust-toolchain.toml  tsconfig.json
.cargo/: config.toml
.github/workflows/: build.yml  ci.yml  release.yml
crates/core/: Cargo.toml
crates/core/src/: lib.rs  lyrics.rs  track.rs
crates/support/: Cargo.toml
crates/support/src/: cache.rs  config.rs  lib.rs  mpris.rs
data/: io.github.chouchiu.floatlyrics.desktop  io.github.chouchiu.floatlyrics.metainfo.xml
data/licenses/: about.hbs  dependencies.json
data/locale/: en.json  zh-CN.json  zh-TW.json
floatlyrics-core/: Cargo.toml
floatlyrics-core/src/: digest.rs  i18n.rs  lib.rs  paths.rs  telemetry.rs  track.rs
floatlyrics-core/src/i18n/: catalogue.rs
floatlyrics-core/src/test/: catalogue_test.rs  i18n_test.rs
floatlyrics-lyrics/: Cargo.toml
floatlyrics-lyrics/src/: cache.rs  lib.rs  lyrics.rs
floatlyrics-lyrics/src/cache/: model.rs  schema.rs  sqlite.rs
floatlyrics-lyrics/src/lyrics/: model.rs  parsing.rs  romanization.rs  search.rs  timeline.rs
floatlyrics-lyrics/src/lyrics/parsing/: filter.rs  lrc.rs  qrc.rs
floatlyrics-lyrics/src/lyrics/romanization/: chinese.rs  japanese.rs  korean.rs
floatlyrics-lyrics/src/lyrics/search/: provider.rs  query.rs  ranking.rs
floatlyrics-lyrics/src/test/: cache_test.rs  filter_test.rs  lyrics_test.rs  parsing_test.rs  search_test.rs  timeline_test.rs
packaging/: build-aur.sh  install.sh  release-aur.sh  update-aur-checksum.sh
packaging/aur/floatlyrics/: .SRCINFO  PKGBUILD
packaging/aur/floatlyrics-bin/: .SRCINFO  PKGBUILD
src/: app.rs  backend.rs  cache.rs  config.rs  frontend.rs  i18n.rs  lib.rs  lyrics.rs  main.rs  mpris.rs  paths.rs  shared.rs  telemetry.rs  track.rs
src/app/: about.rs  controller.rs  localization.rs  manual_search.rs  model.rs  settings.rs  style.rs  view.rs
src/app/view/: css.rs  positioning.rs  rendering.rs
src/backend/: cache.rs  controller.rs  manual_search.rs  model.rs  mpris.rs
src/backend/controller/: loading.rs  presentation.rs
src/backend/controller/loading/: cache.rs  fetch.rs  romanization.rs
src/backend/mpris/: model.rs  position.rs  watcher.rs
src/frontend/: about.rs  localization.rs  manual_search.rs  settings.rs  style.rs  view.rs
src/frontend/about/: license_data.rs
src/frontend/manual_search/: session.rs  state.rs  view.rs
src/frontend/settings/: display_page.rs  font_picker.rs  general_page.rs  persistence.rs  sources_page.rs  state.rs  view.rs
src/frontend/settings/font_picker/: state.rs
src/frontend/view/: adapter.rs  css.rs  layout.rs  lyrics.html  panel.rs  positioning.rs  state.rs  web_lyrics.rs
src/frontend/view/lyrics/: amll.ts  app.tsx  bridge.ts  build.ts  karaoke.ts  lyrics.css  lyrics.html  lyrics.test.tsx  main.tsx  store.ts  styles.d.ts  types.ts
src/frontend/view/positioning/: geometry.rs
src/frontend/view/web_lyrics/: bridge.rs  command.rs  metrics.rs
src/lyrics/: model.rs  parsing.rs  search.rs  timeline.rs
src/lyrics/parsing/: filter.rs
src/mpris/: model.rs  position.rs  watcher.rs
src/shared/: config.rs  manual_search.rs  presentation.rs  runtime.rs
src/shared/config/: persistence.rs  recovery.rs  validation.rs
src/test/: about_test.rs  app_test.rs  cache_service_test.rs  cache_test.rs  config_save_service_test.rs  config_test.rs  controller_state_test.rs  controller_test.rs  filter_test.rs  font_selection_test.rs  lib_test.rs  lyrics_cache_loading_test.rs  lyrics_fetch_test.rs  lyrics_test.rs  manual_search_state_test.rs  manual_search_test.rs  manual_search_view_test.rs  model_test.rs  mpris_test.rs  overlay_state_test.rs  positioning_test.rs  rendering_test.rs  romanization_loading_test.rs  runtime_test.rs  search_test.rs  settings_state_test.rs  settings_test.rs  track_test.rs  view_css_test.rs  view_test.rs  watcher_test.rs  web_lyrics_bridge_test.rs  web_lyrics_command_test.rs  web_lyrics_metrics_test.rs
