# SPDX-FileCopyrightText: 2026 ChouChiu
# SPDX-License-Identifier: GPL-3.0-or-later

[package]
name = "floatlyrics"
version = "1.0.0"
edition = "2024"
rust-version = "1.92"
authors = ["ChouChiu"]
license = "GPL-3.0-or-later"
description = "Floating synchronized lyrics for Spotify on Linux Wayland."
homepage = "https://github.com/ChouChiu/FloatLyrics"
repository = "https://github.com/ChouChiu/FloatLyrics"
readme = "README.md"
keywords = ["lyrics", "spotify", "mpris", "wayland"]
categories = ["multimedia::audio"]

[dependencies]
anyhow = "1"
clap = { version = "4.5", features = ["derive", "env"] }
directories = "6"
futures-util = "0.3"
gtk = { package = "gtk4", version = "0.11", features = ["v4_12"] }
gtk4-layer-shell = "0.8"
lyrics-helper = "0.1.5"
pangocairo = "0.22"
rusqlite = { version = "0.37", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
thiserror = "2"
tokio = { version = "1.46", features = ["macros", "rt-multi-thread", "sync", "time"] }
toml = "0.9"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
zbus = { version = "5.7", default-features = false, features = ["tokio"] }
zvariant = "5.9"

[dev-dependencies]
tempfile = "3"

[build-dependencies]
serde_json = "1"
