# SPDX-FileCopyrightText: 2026 ChouChiu
# SPDX-License-Identifier: GPL-3.0-or-later

[package]
name = "floatlyrics"
version = "1.0.0"
edition = "2024"
rust-version = "1.92"
authors = ["ChouChiu"]
license = "GPL-3.0-or-later"
description = "Floating synchronized lyrics for Spotify on Linux Wayland."
homepage = "https://github.com/ChouChiu/FloatLyrics"
repository = "https://github.com/ChouChiu/FloatLyrics"
readme = "README.md"
keywords = ["lyrics", "spotify", "mpris", "wayland"]
categories = ["multimedia::audio"]

[dependencies]
anyhow = "1"
clap = { version = "4.5", features = ["derive", "env"] }
directories = "6"
futures-util = "0.3"
gtk = { package = "gtk4", version = "0.11", features = ["v4_12"] }
gtk4-layer-shell = "0.8"
lyrics-helper = "0.1.5"
pangocairo = "0.22"
rusqlite = { version = "0.37", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
thiserror = "2"
tokio = { version = "1.46", features = ["macros", "rt-multi-thread", "sync", "time"] }
toml = "0.9"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
zbus = { version = "5.7", default-features = false, features = ["tokio"] }
zvariant = "5.9"

[dev-dependencies]
tempfile = "3"

[build-dependencies]
serde_json = "1"

[package.metadata.deb]
name = "floatlyrics"
maintainer = "ChouChiu"
copyright = "2026 ChouChiu"
"license-file" = "LICENSE"
"extended-description" = """\
FloatLyrics follows Spotify playback through MPRIS and displays synchronized \
lyrics in a lightweight GTK4 layer-shell overlay. Lyrics can be searched \
manually and cached locally."""
section = "sound"
priority = "optional"
depends = "libgtk-4-1 (>= 4.12), libgtk4-layer-shell0, libpango-1.0-0, libcairo2, libglib2.0-0, libssl3"
assets = [
    ["target/release/floatlyrics", "usr/bin/floatlyrics", "755"],
    ["data/io.github.chouchiu.floatlyrics.desktop", "usr/share/applications/io.github.chouchiu.floatlyrics.desktop", "644"],
    ["data/io.github.chouchiu.floatlyrics.metainfo.xml", "usr/share/metainfo/io.github.chouchiu.floatlyrics.metainfo.xml", "644"],
    ["data/icons/hicolor/16x16/apps/io.github.chouchiu.floatlyrics.png", "usr/share/icons/hicolor/16x16/apps/io.github.chouchiu.floatlyrics.png", "644"],
    ["data/icons/hicolor/24x24/apps/io.github.chouchiu.floatlyrics.png", "usr/share/icons/hicolor/24x24/apps/io.github.chouchiu.floatlyrics.png", "644"],
    ["data/icons/hicolor/32x32/apps/io.github.chouchiu.floatlyrics.png", "usr/share/icons/hicolor/32x32/apps/io.github.chouchiu.floatlyrics.png", "644"],
    ["data/icons/hicolor/48x48/apps/io.github.chouchiu.floatlyrics.png", "usr/share/icons/hicolor/48x48/apps/io.github.chouchiu.floatlyrics.png", "644"],
    ["data/icons/hicolor/64x64/apps/io.github.chouchiu.floatlyrics.png", "usr/share/icons/hicolor/64x64/apps/io.github.chouchiu.floatlyrics.png", "644"],
    ["data/icons/hicolor/128x128/apps/io.github.chouchiu.floatlyrics.png", "usr/share/icons/hicolor/128x128/apps/io.github.chouchiu.floatlyrics.png", "644"],
    ["data/icons/hicolor/256x256/apps/io.github.chouchiu.floatlyrics.png", "usr/share/icons/hicolor/256x256/apps/io.github.chouchiu.floatlyrics.png", "644"],
    ["data/icons/hicolor/512x512/apps/io.github.chouchiu.floatlyrics.png", "usr/share/icons/hicolor/512x512/apps/io.github.chouchiu.floatlyrics.png", "644"],
    ["data/icons/hicolor/scalable/apps/io.github.chouchiu.floatlyrics.svg", "usr/share/icons/hicolor/scalable/apps/io.github.chouchiu.floatlyrics.svg", "644"],
    ["data/icons/hicolor/symbolic/apps/io.github.chouchiu.floatlyrics-symbolic.svg", "usr/share/icons/hicolor/symbolic/apps/io.github.chouchiu.floatlyrics-symbolic.svg", "644"],
    ["LICENSE", "usr/share/doc/floatlyrics/LICENSE", "644"],
]

[package.metadata.generate-rpm]
summary = "Floating synchronized lyrics for Spotify on Linux Wayland"
description = """\
FloatLyrics follows Spotify playback through MPRIS and displays synchronized \
lyrics in a lightweight GTK4 layer-shell overlay. Lyrics can be searched \
manually and cached locally."""
assets = [
    { source = "target/release/floatlyrics", dest = "/usr/bin/floatlyrics", mode = "755" },
    { source = "data/io.github.chouchiu.floatlyrics.desktop", dest = "/usr/share/applications/io.github.chouchiu.floatlyrics.desktop", mode = "644" },
    { source = "data/io.github.chouchiu.floatlyrics.metainfo.xml", dest = "/usr/share/metainfo/io.github.chouchiu.floatlyrics.metainfo.xml", mode = "644" },
    { source = "data/icons/hicolor/16x16/apps/io.github.chouchiu.floatlyrics.png", dest = "/usr/share/icons/hicolor/16x16/apps/io.github.chouchiu.floatlyrics.png", mode = "644" },
    { source = "data/icons/hicolor/24x24/apps/io.github.chouchiu.floatlyrics.png", dest = "/usr/share/icons/hicolor/24x24/apps/io.github.chouchiu.floatlyrics.png", mode = "644" },
    { source = "data/icons/hicolor/32x32/apps/io.github.chouchiu.floatlyrics.png", dest = "/usr/share/icons/hicolor/32x32/apps/io.github.chouchiu.floatlyrics.png", mode = "644" },
    { source = "data/icons/hicolor/48x48/apps/io.github.chouchiu.floatlyrics.png", dest = "/usr/share/icons/hicolor/48x48/apps/io.github.chouchiu.floatlyrics.png", mode = "644" },
    { source = "data/icons/hicolor/64x64/apps/io.github.chouchiu.floatlyrics.png", dest = "/usr/share/icons/hicolor/64x64/apps/io.github.chouchiu.floatlyrics.png", mode = "644" },
    { source = "data/icons/hicolor/128x128/apps/io.github.chouchiu.floatlyrics.png", dest = "/usr/share/icons/hicolor/128x128/apps/io.github.chouchiu.floatlyrics.png", mode = "644" },
    { source = "data/icons/hicolor/256x256/apps/io.github.chouchiu.floatlyrics.png", dest = "/usr/share/icons/hicolor/256x256/apps/io.github.chouchiu.floatlyrics.png", mode = "644" },
    { source = "data/icons/hicolor/512x512/apps/io.github.chouchiu.floatlyrics.png", dest = "/usr/share/icons/hicolor/512x512/apps/io.github.chouchiu.floatlyrics.png", mode = "644" },
    { source = "data/icons/hicolor/scalable/apps/io.github.chouchiu.floatlyrics.svg", dest = "/usr/share/icons/hicolor/scalable/apps/io.github.chouchiu.floatlyrics.svg", mode = "644" },
    { source = "data/icons/hicolor/symbolic/apps/io.github.chouchiu.floatlyrics-symbolic.svg", dest = "/usr/share/icons/hicolor/symbolic/apps/io.github.chouchiu.floatlyrics-symbolic.svg", mode = "644" },
    { source = "LICENSE", dest = "/usr/share/licenses/floatlyrics/LICENSE", mode = "644" },
]

[package.metadata.generate-rpm.requires]
gtk4 = "*"
"gtk4-layer-shell" = "*"
pango = "*"
cairo = "*"
glib2 = "*"
"openssl-libs" = "*"
