# SPDX-FileCopyrightText: 2026 ChouChiu
# SPDX-License-Identifier: AGPL-3.0-only

[workspace]
members = [".", "floatlyrics-core", "floatlyrics-lyrics"]
default-members = [".", "floatlyrics-core", "floatlyrics-lyrics"]
resolver = "2"

[workspace.package]
version = "1.1.0"
edition = "2024"
rust-version = "1.93"
authors = ["ChouChiu"]
license = "AGPL-3.0-only"
repository = "https://github.com/ChouChiu/FloatLyrics"

[workspace.dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

[package]
name = "floatlyrics"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
description = "Floating synchronized lyrics for Spotify on Linux Wayland."
homepage = "https://github.com/ChouChiu/FloatLyrics"
repository.workspace = true
readme = "README.md"
keywords = ["lyrics", "spotify", "mpris", "wayland"]
categories = ["multimedia::audio"]

[dependencies]
anyhow.workspace = true
serde.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
clap = { version = "4.6", features = ["derive", "env"] }
futures-util = "0.3"
gtk = { package = "gtk4", version = "0.11", features = ["v4_12"] }
gtk4-layer-shell = "0.8"
relm4 = { version = "0.11", default-features = false, features = ["macros"] }
serde_json.workspace = true
tokio = { version = "1.52", features = ["macros", "rt-multi-thread", "sync", "time"] }
toml = "0.9"
webkit6 = "0.6"
zbus = { version = "5.17", default-features = false, features = ["tokio"] }
zvariant = "5.13"
floatlyrics-core = { path = "floatlyrics-core" }
floatlyrics-lyrics = { path = "floatlyrics-lyrics" }

[dev-dependencies]
tempfile = "3"

[profile.release]
codegen-units = 1
lto = "fat"
opt-level = "z"
panic = "abort"
strip = "symbols"

[package.metadata.deb]
name = "floatlyrics"
maintainer = "ChouChiu"
copyright = "2026 ChouChiu"
"license-file" = "LICENSE"
"extended-description" = """\
FloatLyrics follows Spotify playback through MPRIS and displays synchronized \
lyrics in a lightweight GTK4 layer-shell overlay. Lyrics can be searched \
manually and cached locally."""
section = "sound"
priority = "optional"
depends = "libgtk-4-1 (>= 4.12), libgtk4-layer-shell0, libwebkitgtk-6.0-4, libpango-1.0-0, libcairo2, libglib2.0-0, libssl3"
assets = [
    ["target/release/floatlyrics", "usr/bin/floatlyrics", "755"],
    ["data/io.github.chouchiu.floatlyrics.desktop", "usr/share/applications/io.github.chouchiu.floatlyrics.desktop", "644"],
    ["data/io.github.chouchiu.floatlyrics.metainfo.xml", "usr/share/metainfo/io.github.chouchiu.floatlyrics.metainfo.xml", "644"],
    ["data/icons/hicolor/16x16/apps/io.github.chouchiu.floatlyrics.png", "usr/share/icons/hicolor/16x16/apps/io.github.chouchiu.floatlyrics.png", "644"],
    ["data/icons/hicolor/24x24/apps/io.github.chouchiu.floatlyrics.png", "usr/share/icons/hicolor/24x24/apps/io.github.chouchiu.floatlyrics.png", "644"],
    ["data/icons/hicolor/32x32/apps/io.github.chouchiu.floatlyrics.png", "usr/share/icons/hicolor/32x32/apps/io.github.chouchiu.floatlyrics.png", "644"],
    ["data/icons/hicolor/48x48/apps/io.github.chouchiu.floatlyrics.png", "usr/share/icons/hicolor/48x48/apps/io.github.chouchiu.floatlyrics.png", "644"],
    ["data/icons/hicolor/64x64/apps/io.github.chouchiu.floatlyrics.png", "usr/share/icons/hicolor/64x64/apps/io.github.chouchiu.floatlyrics.png", "644"],
    ["data/icons/hicolor/128x128/apps/io.github.chouchiu.floatlyrics.png", "usr/share/icons/hicolor/128x128/apps/io.github.chouchiu.floatlyrics.png", "644"],
    ["data/icons/hicolor/256x256/apps/io.github.chouchiu.floatlyrics.png", "usr/share/icons/hicolor/256x256/apps/io.github.chouchiu.floatlyrics.png", "644"],
    ["data/icons/hicolor/512x512/apps/io.github.chouchiu.floatlyrics.png", "usr/share/icons/hicolor/512x512/apps/io.github.chouchiu.floatlyrics.png", "644"],
    ["data/icons/hicolor/scalable/apps/io.github.chouchiu.floatlyrics.svg", "usr/share/icons/hicolor/scalable/apps/io.github.chouchiu.floatlyrics.svg", "644"],
    ["data/icons/hicolor/symbolic/apps/io.github.chouchiu.floatlyrics-symbolic.svg", "usr/share/icons/hicolor/symbolic/apps/io.github.chouchiu.floatlyrics-symbolic.svg", "644"],
    ["data/locale/en.json", "usr/share/floatlyrics/locale/en.json", "644"],
    ["data/locale/zh-CN.json", "usr/share/floatlyrics/locale/zh-CN.json", "644"],
    ["data/locale/zh-TW.json", "usr/share/floatlyrics/locale/zh-TW.json", "644"],
    ["LICENSE", "usr/share/doc/floatlyrics/LICENSE", "644"],
]

[package.metadata.generate-rpm]
summary = "Floating synchronized lyrics for Spotify on Linux Wayland"
description = """\
FloatLyrics follows Spotify playback through MPRIS and displays synchronized \
lyrics in a lightweight GTK4 layer-shell overlay. Lyrics can be searched \
manually and cached locally."""
assets = [
    { source = "target/release/floatlyrics", dest = "/usr/bin/floatlyrics", mode = "755" },
    { source = "data/io.github.chouchiu.floatlyrics.desktop", dest = "/usr/share/applications/io.github.chouchiu.floatlyrics.desktop", mode = "644" },
    { source = "data/io.github.chouchiu.floatlyrics.metainfo.xml", dest = "/usr/share/metainfo/io.github.chouchiu.floatlyrics.metainfo.xml", mode = "644" },
    { source = "data/icons/hicolor/16x16/apps/io.github.chouchiu.floatlyrics.png", dest = "/usr/share/icons/hicolor/16x16/apps/io.github.chouchiu.floatlyrics.png", mode = "644" },
    { source = "data/icons/hicolor/24x24/apps/io.github.chouchiu.floatlyrics.png", dest = "/usr/share/icons/hicolor/24x24/apps/io.github.chouchiu.floatlyrics.png", mode = "644" },
    { source = "data/icons/hicolor/32x32/apps/io.github.chouchiu.floatlyrics.png", dest = "/usr/share/icons/hicolor/32x32/apps/io.github.chouchiu.floatlyrics.png", mode = "644" },
    { source = "data/icons/hicolor/48x48/apps/io.github.chouchiu.floatlyrics.png", dest = "/usr/share/icons/hicolor/48x48/apps/io.github.chouchiu.floatlyrics.png", mode = "644" },
    { source = "data/icons/hicolor/64x64/apps/io.github.chouchiu.floatlyrics.png", dest = "/usr/share/icons/hicolor/64x64/apps/io.github.chouchiu.floatlyrics.png", mode = "644" },
    { source = "data/icons/hicolor/128x128/apps/io.github.chouchiu.floatlyrics.png", dest = "/usr/share/icons/hicolor/128x128/apps/io.github.chouchiu.floatlyrics.png", mode = "644" },
    { source = "data/icons/hicolor/256x256/apps/io.github.chouchiu.floatlyrics.png", dest = "/usr/share/icons/hicolor/256x256/apps/io.github.chouchiu.floatlyrics.png", mode = "644" },
    { source = "data/icons/hicolor/512x512/apps/io.github.chouchiu.floatlyrics.png", dest = "/usr/share/icons/hicolor/512x512/apps/io.github.chouchiu.floatlyrics.png", mode = "644" },
    { source = "data/icons/hicolor/scalable/apps/io.github.chouchiu.floatlyrics.svg", dest = "/usr/share/icons/hicolor/scalable/apps/io.github.chouchiu.floatlyrics.svg", mode = "644" },
    { source = "data/icons/hicolor/symbolic/apps/io.github.chouchiu.floatlyrics-symbolic.svg", dest = "/usr/share/icons/hicolor/symbolic/apps/io.github.chouchiu.floatlyrics-symbolic.svg", mode = "644" },
    { source = "data/locale/en.json", dest = "/usr/share/floatlyrics/locale/en.json", mode = "644" },
    { source = "data/locale/zh-CN.json", dest = "/usr/share/floatlyrics/locale/zh-CN.json", mode = "644" },
    { source = "data/locale/zh-TW.json", dest = "/usr/share/floatlyrics/locale/zh-TW.json", mode = "644" },
    { source = "LICENSE", dest = "/usr/share/licenses/floatlyrics/LICENSE", mode = "644" },
]

[package.metadata.generate-rpm.requires]
gtk4 = "*"
"gtk4-layer-shell" = "*"
"webkitgtk6.0" = "*"
pango = "*"
cairo = "*"
glib2 = "*"
"openssl-libs" = "*"
