# SPDX-FileCopyrightText: 2026 ChouChiu
# SPDX-License-Identifier: AGPL-3.0-only

[package]
name = "floatlyrics-lyrics"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
description = "Lyrics domain logic for FloatLyrics"
repository.workspace = true

[dependencies]
floatlyrics-core = { path = "../floatlyrics-core" }
anyhow.workspace = true
serde.workspace = true
thiserror.workspace = true
serde_json.workspace = true
lyrics-helper = "0.1.5"
kakasi = "0.1.0"
korean-romanize = "0.2.0"
pinyin = { version = "0.11.0", default-features = false, features = ["with_tone"] }
rusqlite = { version = "0.37", features = ["bundled"] }
rust-canto = "0.3.4"

[dev-dependencies]
tempfile = "3"
