[package]
name = "floatlyrics-support"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
directories.workspace = true
floatlyrics-core.workspace = true
futures-util.workspace = true
rusqlite.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
tokio.workspace = true
toml.workspace = true
tracing-subscriber.workspace = true
zbus.workspace = true
zvariant.workspace = true

[dev-dependencies]
tempfile.workspace = true
